--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,57 +9,59 @@ body{
     overflow: hidden;
 }
 
-.img{
-    display: flex;
-    margin-left: -35px;
-    justify-content: flex-end;
-    align-items: center;
+.wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -1;
 }
 
 .container{
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
-    display: flex;
-}
-.info{
-	color: white;
-	text-decoration: none;
-	padding-left: -35vh;
-	float: left;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    padding: 0 2rem;
 }
 
-.img img{
-    width: 500px;
-}
-
-form{
-    width: 360px;
-}
-
-.login-content img{
-    height: 120px;
+.img{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
 }
 
 .login-content{
 	display: flex;
 	justify-content: flex-start;
-    padding-left: 225px;
 	align-items: center;
 	text-align: center;
 }
 
+.img img{
+	width: 500px;
+}
+
+form{
+	width: 360px;
+}
+
+.login-content img{
+    height: 100px;
+}
 
 .login-content h2{
 	margin: 15px 0;
 	color: #333;
 	text-transform: uppercase;
-	font-size: 2.5rem;
+	font-size: 2.9rem;
 }
 
 .login-content .input-div{
 	position: relative;
-    display: flex;
-    /* grid-template-columns: 7% 93%; */
+    display: grid;
+    grid-template-columns: 7% 93%;
     margin: 25px 0;
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
@@ -70,7 +72,7 @@ form{
 }
 
 .i{
-	color: #4C4C78;
+	color: #d9d9d9;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -90,7 +92,7 @@ form{
 	left: 10px;
 	top: 50%;
 	transform: translateY(-50%);
-	color: #4C4C78;
+	color: #999;
 	font-size: 18px;
 	transition: .3s;
 }
@@ -149,7 +151,7 @@ a{
 	display: block;
 	text-align: right;
 	text-decoration: none;
-	color: #4C4C78;
+	color: #999;
 	font-size: 0.9rem;
 	transition: .3s;
 }
@@ -165,7 +167,7 @@ a:hover{
 	border-radius: 25px;
 	outline: none;
 	border: none;
-	background-image: linear-gradient(to right, #4C4C78, #4C4C78, #4C4C78);
+	background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
 	background-size: 200%;
 	font-size: 1.2rem;
 	color: #fff;
@@ -177,5 +179,44 @@ a:hover{
 }
 .btn:hover{
 	background-position: right;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 2);
+}
+
+
+@media screen and (max-width: 1050px){
+	.container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	form{
+		width: 290px;
+	}
+
+	.login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.img img{
+		width: 400px;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.container{
+		grid-template-columns: 1fr;
+	}
+
+	.img{
+		display: none;
+	}
+
+	.wave{
+		display: none;
+	}
+
+	.login-content{
+		justify-content: center;
+	}
 }
