--- a/RestaurantManagementSystem/RestaurantManagementSystem/Views/Branch/AddBranch.cshtml
+++ b/RestaurantManagementSystem/RestaurantManagementSystem/Views/Branch/AddBranch.cshtml
@@ -1,10 +1,11 @@
-﻿
+﻿<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <title>Add Branch</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-    @*@Styles.Render("~/Content/")*@
+    <link rel="stylesheet" href="../styles/main-menu.css">
     <style>
         * {
             padding: 0;
@@ -42,8 +43,6 @@
             margin-bottom: -5px;
             padding: 10px 10px 15px 0px;
             font-size: 1.3rem;
-            border-radius: 25px;
-            text-align: center;
         }
 
         .contact {
@@ -124,6 +123,27 @@
     </style>
 </head>
 
+<body>
+    <div class="header">
+        <nav class="navbar">
+            <div class="logo">
+                <h1> <a href="index.html">B & B</a></h1>
+            </div>
+            <ul class="navopt">
+                <li><a href="">Business</a> </li>
+                <li><a href="">Pricing</a> </li>
+                <li><a href="">Features</a> </li>
+                <li><a href="">About</a> </li>
+            </ul>
+            <div class="btns">
+                <button type="submit" class="btn1">Login</button>
+                <button type="submit" class="btn2">Sign up</button>
+            </div>
+        </nav>
+    </div>
+
+
+
 
 
 
@@ -152,3 +172,53 @@
 
 
 
+
+
+
+
+
+    <div class="foot">
+        <div class="box5">
+            <h3>B & B</h3>
+            <p>
+                Serves variety of food from <br>
+                the continental cusines
+                to <br> the fast food item.
+            </p>
+
+            <div class="logo2">
+                <a href=""><img src="../images/facebook.png" alt=""></a>
+                <a href=""><img src="../images/twitter.png" alt=""></a>
+                <a href=""><img src="../images/instagram.png" alt=""></a>
+            </div>
+
+        </div>
+        <div class="box6">
+            <h4>B & B</h4>
+
+            <a href="">About</a> <br>
+            <a href="">Terms of use</a> <br>
+            <a href="">Privacy Policy</a> <br>
+
+        </div>
+        <div class="box7">
+            <h4>Support</h4>
+            <a href=""> Support Centre</a> <br>
+            <a href=""> Our Services</a> <br>
+            <a href=""> Quick Chat</a>
+        </div>
+        <div class="box8">
+            <h4>Contact</h4>
+            <a href=""> Contact Number</a> <br>
+            <a href=""> Location</a>
+        </div>
+
+    </div>
+    <div class="copyright">
+        <p>
+            Copyright © 2021 B & B Co.
+        </p>
+    </div>
+</body>
+
+</html>
