--- a/RestaurantManagementSystem/RestaurantManagementSystem/Views/Branch/AddBranch.cshtml
+++ b/RestaurantManagementSystem/RestaurantManagementSystem/Views/Branch/AddBranch.cshtml
@@ -1,11 +1,8 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+﻿
     <title>Add Branch</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/main-menu.css">
+    <link rel="stylesheet" href="Content/main-menu.css">
+@Styles.Render("~/Content/main-menu.css");
     <style>
         * {
             padding: 0;
@@ -19,7 +16,7 @@
         }
 
         .containers {
-            display: flex;
+             display: flex;
         }
 
         .image {
@@ -121,104 +118,75 @@
                 box-shadow: 0 0 10px rgba(0, 0, 0, 2);
             }
     </style>
-</head>
-
-<body>
-    <div class="header">
-        <nav class="navbar">
-            <div class="logo">
-                <h1> <a href="index.html">B & B</a></h1>
-            </div>
-            <ul class="navopt">
-                <li><a href="">Business</a> </li>
-                <li><a href="">Pricing</a> </li>
-                <li><a href="">Features</a> </li>
-                <li><a href="">About</a> </li>
-            </ul>
-            <div class="btns">
-                <button type="submit" class="btn1">Login</button>
-                <button type="submit" class="btn2">Sign up</button>
-            </div>
-        </nav>
-    </div>
 
 
 
 
 
 
-    <div class="containers">
-        <div class=" right-container">
-            <form action="" align="center">
-                <h2> Add a Restaurant Branch </h2>
-                <div class="name">
-                    <input type="text" class="name" placeholder="Name">
-                </div>
-
-
-
-                <button class="submit" type="submit"> Add</button>
-                <button class="cancel" type="cancel">Cancel</button>
-            </form>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="foot">
-        <div class="box5">
-            <h3>B & B</h3>
-            <p>
-                Serves variety of food from <br>
-                the continental cusines
-                to <br> the fast food item.
-            </p>
-
-            <div class="logo2">
-                <a href=""><img src="../images/facebook.png" alt=""></a>
-                <a href=""><img src="../images/twitter.png" alt=""></a>
-                <a href=""><img src="../images/instagram.png" alt=""></a>
+<div class="containers">
+    <div class=" right-container">
+        <form action="" align="center">
+            <h2> Add a Restaurant Branch </h2>
+            <div class="name">
+                <input type="text" class="name" placeholder="Name" id="BranchName">
             </div>
 
-        </div>
-        <div class="box6">
-            <h4>B & B</h4>
 
-            <a href="">About</a> <br>
-            <a href="">Terms of use</a> <br>
-            <a href="">Privacy Policy</a> <br>
 
-        </div>
-        <div class="box7">
-            <h4>Support</h4>
-            <a href=""> Support Centre</a> <br>
-            <a href=""> Our Services</a> <br>
-            <a href=""> Quick Chat</a>
-        </div>
-        <div class="box8">
-            <h4>Contact</h4>
-            <a href=""> Contact Number</a> <br>
-            <a href=""> Location</a>
-        </div>
-
+            <button class="submit" onclick="save()" type="submit"> Add</button>
+            <button class="cancel" type="cancel">Cancel</button>
+        </form>
     </div>
-    <div class="copyright">
-        <p>
-            Copyright © 2021 B & B Co.
-        </p>
-    </div>
-</body>
+</div>
 
-</html>
+
+
+
+
+
+
+
+
+@section scripts{
+    <script>
+        function save() {
+            var branch = document.getElementById("BranchName").value;
+
+
+
+            var obj = {
+
+                Name: branch,
+               
+            };
+
+            var data = JSON.stringify(obj);
+            console.log(data);
+
+
+
+
+            $.ajax({
+                url: "https://localhost:44355/RestaurantAPI/Branch/AddBranch",
+                type: 'POST',
+                data: JSON.stringify(obj),
+                contentType: "application/json;charset=utf-8",
+                success: function (data) {
+                    alert(data);
+                    alert("Branch Added Sucessfully");
+                },
+                error: function (data) {
+                }
+            });
+
+            //	window.location = "";
+
+        }
+    </script>
+
+}
+
+
+
+
